--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title><%= htmlWebpackPlugin.options.applicationName %></title>
-        <%= htmlWebpackPlugin.options.targetEnv === 'insights' ? '<esi:include src="/@@env/chrome/snippets/head.html"/>' : null %>
     </head>
     <body>
-        <%= htmlWebpackPlugin.options.targetEnv === 'insights' ? '<esi:include src="/@@env/chrome/snippets/body.html"/>' : '<div id="root"></div>' %>
+        <div id="root"></div>
     </body>
 </html>
